add me point and fix swagger hardcode
